# autocom

./: .drone.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  TODO.md
cmake/: FindAutoCOM.cmake  autocom_configure.cmake  generator.cmake
doc/: CompileTimeBinding.md  EarlyBinding.md  LateBinding.md  RunTimeBinding.md
example/: Thermo.raw  regexp.cpp  script.cpp  thermo.cpp  vtable.cpp  wsh.cpp
example/cmake/: wsh.cpp  wsh_ns.cc  wsh_ns.cpp
example/early/: script.cpp  thermo.cpp  wsh.cc  wsh.cpp
example/late/: regexp.cc  regexp.cpp  thermo.cc  thermo.cpp  wsh.cc
include/: autocom.h  autocom.hpp
include/autocom/: bstr.h  bstr.hpp  com.h  com.hpp  dispatch.h  dispatch.hpp  dispparams.h  dispparams.hpp  encoding.hpp  enum.h  enum.hpp  except.hpp  guid.h  guid.hpp  iterator.h  iterator.hpp  safearray.h  safearray.hpp  typeinfo.h  typeinfo.hpp  util.h  util.hpp  variant.h  variant.hpp
include/autocom/encoding/: converters.hpp  unicode.hpp
include/autocom/util/: alias.h  alias.hpp  bstr.hpp  define.h  define.hpp  enum.hpp  exception.h  exception.hpp  sfinae.h  shared_ptr.h  shared_ptr.hpp  type.h  type.hpp  variadic.hpp
src/: bstr.cc  bstr.cpp  com.cc  com.cpp  dispatch.cc  dispatch.cpp  dispparams.cc  dispparams.cpp  enum.cc  enum.cpp  guid.cc  guid.cpp  iterator.cc  iterator.cpp  safearray.cc  safearray.cpp  typeinfo.cc  typeinfo.cpp  variant.cc  variant.cpp
src/encoding/: converters.cpp  unicode.cpp
src/util/: alias.cc  alias.cpp  bstr.cpp  exception.cc  exception.cpp  type.cc  type.cpp
test/: bstr.cpp  dispparams.cpp  guid.cpp  main.cpp  type.cpp  variant.cpp
test/encoding/: converters.cpp  unicode.cpp
test/src/: bstr.cc  bstr.cpp  dispparams.cc  dispparams.cpp  guid.cc  guid.cpp  main.cc  safearray.cc  safearray.cpp  variant.cc  variant.cpp
test/src/encoding/: converters.cpp  unicode.cpp
test/src/util/: alias.cc  alias.cpp  type.cc  type.cpp
